@@ -1,7 +1,7 @@
 //
 // HTTPResponseTest.cpp
 //
-// $Id: //poco/1.4/Net/testsuite/src/HTTPResponseTest.cpp#1 $
+// $Id: //poco/1.4/Net/testsuite/src/HTTPResponseTest.cpp#2 $
 //
 // Copyright (c) 2005-2006, Applied Informatics Software Engineering GmbH.
 // and Contributors.
@@ -196,6 +196,15 @@ void HTTPResponseTest::testCookies()
 	assert (cookie2.getPath() == cookie2a.getPath());
 	assert (cookie2.getSecure() == cookie2a.getSecure());
 	assert (cookie2.getMaxAge() == cookie2a.getMaxAge());
+	
+	HTTPResponse response2;
+	response2.add("Set-Cookie", "name1=value1");
+	response2.add("Set-cookie", "name2=value2");
+	cookies.clear();
+	response2.getCookies(cookies);
+	assert (cookies.size() == 2);
+	assert (cookies[0].getName() == "name1" && cookies[1].getName() == "name2" 
+	    || cookies[0].getName() == "name2" && cookies[1].getName() == "name1"); 
 }
 
 
